[package]
name = "unitypackage_util"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.2.5", features = ["derive"] }
exitcode = "1.1.2"
flate2 = "1.0.25"
infer = "0.13.0"
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tar = "0.4.38"
unity-yaml-rust = "0.1.1"
walkdir = "2.3.3"
xxhash-rust = { version = "0.8.6", features = ["xxh64"] }
